--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>selenium-firefox-driver</artifactId>
       <version>3.12.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 
   <build>
